# ble_keyboard_2

./: CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  battery.c  battery.h  ble_hid_keyboard.c  ble_hid_keyboard.h  hid_device_le_prf.c  hid_host_example.c  idf_component.yml  led.c  led.h
